# MyProject

./: .env.example  .flake8  README.md  main.py  pyproject.toml
src/: data_file_reader.py  decorators.py  external_api.py  generators.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_data_file_reader.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
