[project]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey Parkhanovich",email = "komrad.segunchik@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
# flake8 = "^7.3.0"
mypy = "^1.17.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
