[project]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey Parkhanovich",email = "komrad.segunchik@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
mypy = "^1.17.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"



[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = ".git"

[tool.isort]
line_length = 119
